# MyGtkCID

./: .gitattributes  AUTHORS  ChangeLog  INSTALL  LineOutput  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac  configure.in  mkinstalldirs
include/: Makefile.am  Makefile.in  cid_string.h  config.h  config.h.in  modem.h
lib/: Makefile.am  Makefile.in  cid_string.C  modem.C
src/: Makefile.am  Makefile.in
src/console/: Makefile.am  Makefile.in  main.C
src/popup/: Makefile.am  Makefile.in  main.C  main2.C  popup.C  popup.h
