AC_INIT(src)
AM_INIT_AUTOMAKE(modem,0.0.1)
AM_CONFIG_HEADER(include/config.h)
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_RANLIB
##
echo "blah, blah, blah"
echo "this is a subliminal message...."
##
AC_PROG_INSTALL
AC_OUTPUT(Makefile include/Makefile lib/Makefile src/Makefile \
src/console/Makefile \
src/popup/Makefile \
bin/Makefile) 
##
##
##
echo ""
echo "--- Now run make, binaries will be in ./bin ---"
echo ""
